Change LineWidth::snapUncommittedWidth to ceil

Change the snapUncommittedWidth method on the LineWidth class to ceil to
the nearest LayoutUnit rather than to floor. It's only called from a one
place, BreakingContext::increment, where the intent is to increment, not
decrement, the uncommitted width. This ensures that the snapped width is
wide enough to contain the text.

This fixes a bug where tabulation characters were omitted incorrectly in
text layout due to the width being floored during the width commit step.

R=kojii@chromium.org
BUG=605820

Review URL: https://codereview.chromium.org/1919693002

Cr-Commit-Position: refs/heads/master@{#389413}

Former-commit-id: 957ee1cf9558f59e65c943a85fab2ec7ce94ebe2